--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,39 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer components {
-  .input{
-    @apply
-    p-1
-    mb-1
-    rounded-sm
-    lg:my-2
-    focus:outline-color-blue-primary
-    focus:outline
-    focus:outline-2
-    text-color-bg-dark
-  }
-  .input-invalid{
-    @apply
-    outline
-    outline-2
-    outline-color-red-primary
-    p-1
-    mb-1
-    rounded-sm
-    focus:outline-none
-    text-color-bg-dark }
-
-  .button{
-    @apply
-    my-2
-    py-2
-    bg-color-blue-primary
-    hover:bg-color-blue-secondary
-    font-medium
-    text-sm
-    rounded-md
-    border-t
-  }
-}
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
